# cellwar

./: CLAUDE.md  Cargo.toml  README.md  TASKS.md
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
