[package]
name = "cellwar-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cellwar-engine = { path = "../engine" }
actix-web = "4"
actix-ws = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
